k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-disease-api
  labels:
    app: heart-disease-api
  annotations:
    description: "Heart Disease API service"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: heart-disease-api
  sessionAffinity: None
